--- a/CS555Proj.ipynb
+++ b/CS555Proj.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOLysVY/nWyLc+niRKd2o7p",
+      "authorship_tag": "ABX9TyMSmI6JWcLszERF2KG28YJg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,25 +28,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
-        "id": "0eGLsv5Xag4p",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "222bd1a5-9c7f-4d04-f907-51c97ec5b93d"
+        "id": "0eGLsv5Xag4p"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Hello World!\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "print(\"Hello World!\")"
+        "# Import needed forms\n",
+        "import os\n",
+        "import collections\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import functools\n",
+        "import matplotlib.pyplot as plt\n",
+        "import cv2\n",
+        "from PIL import Image\n",
+        "import tensorflow as tf\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "import warnings"
       ]
     },
     {
@@ -58,7 +57,7 @@
       "metadata": {
         "id": "40ft-0lLeBkx"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     }
   ]
