--- a/CS555Proj.ipynb
+++ b/CS555Proj.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN263gBB0mCfZyWbAPtA3bi",
+      "authorship_tag": "ABX9TyO9TmTn5TE1hY/gxisiW9rh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -181,25 +181,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 13,
       "metadata": {
-        "id": "0eGLsv5Xag4p",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "612ff420-8948-4255-db1d-a49b5db7f231"
+        "id": "0eGLsv5Xag4p"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Creating new Ultralytics Settings v0.0.6 file ✅ \n",
-            "View Ultralytics Settings with 'yolo settings' or at '/root/.config/Ultralytics/settings.json'\n",
-            "Update Settings with 'yolo settings key=value', i.e. 'yolo settings runs_dir=path/to/dir'. For help see https://docs.ultralytics.com/quickstart/#ultralytics-settings.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Import needed forms\n",
         "import os\n",
@@ -215,7 +201,8 @@
         "import warnings\n",
         "import zipfile\n",
         "from google.colab import drive\n",
-        "import ultralytics\n"
+        "import ultralytics\n",
+        "import shutil"
       ]
     },
     {
@@ -314,16 +301,29 @@
     {
       "cell_type": "code",
       "source": [
-        "# Split the data into training and validation sets (80% train, 20% val)\n",
+        "# Split the data into training and validation sets 80% train, 20% val\n",
         "train_images, val_images, train_labels, val_labels = train_test_split(\n",
         "    images, labels, test_size=0.2, random_state=42\n",
-        ")\n",
-        "\n"
+        ")\n"
       ],
       "metadata": {
         "id": "_8sOiGxduQqE"
       },
-      "execution_count": 11,
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define helper function to organize the files into appropriate train and value folders\n",
+        "def move_files(file_list, src_folder, dest_folder):\n",
+        "    for file in file_list:\n",
+        "        shutil.copy(os.path.join(src_folder, file), os.path.join(dest_folder, file))"
+      ],
+      "metadata": {
+        "id": "GjoR3rmxFafU"
+      },
+      "execution_count": 14,
       "outputs": []
     }
   ]
