--- a/CS555Proj.ipynb
+++ b/CS555Proj.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPflCXUICBLIhNihYApMftI",
+      "authorship_tag": "ABX9TyOacwlPDcfDXPpSGQTV8xiL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -327,17 +327,17 @@
         "# We don't need wandb\n",
         "settings.update({\"wandb\": False})\n",
         "\n",
-        "# Load a COCO-pretrained YOLOv8n model\n",
+        "# Load a COCO-pretrained YOLO model\n",
         "yolo_model = YOLO(\"yolo11n.pt\")\n",
         "\n",
         "yolo_model.info()"
       ],
       "metadata": {
-        "id": "D0uYAOKNKXfL",
-        "outputId": "55f6e8e1-0070-483d-c337-c83a1d3fe964",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "D0uYAOKNKXfL",
+        "outputId": "55f6e8e1-0070-483d-c337-c83a1d3fe964"
       },
       "execution_count": 27,
       "outputs": [
@@ -384,12 +384,12 @@
         "# https://docs.ultralytics.com/modes/train/"
       ],
       "metadata": {
-        "id": "y9Lqt4O_JcU0",
-        "outputId": "964ac987-c221-49ba-933d-9af1d22d81d6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "y9Lqt4O_JcU0",
+        "outputId": "964ac987-c221-49ba-933d-9af1d22d81d6"
       },
       "execution_count": 30,
       "outputs": [
