Added Clay's Code to Colab

--- a/CS555Proj.ipynb
+++ b/CS555Proj.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOacwlPDcfDXPpSGQTV8xiL",
+      "authorship_tag": "ABX9TyMd4hJ6HpIxWY2yJv//SQcZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,7 @@
         "id": "MpTguDoQxbiS",
         "outputId": "eb04737f-6f6e-4c09-e652-e4a8ef058909"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -123,7 +123,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "0eGLsv5Xag4p"
       },
@@ -146,7 +146,8 @@
         "import ultralytics\n",
         "import shutil\n",
         "from ultralytics import YOLO, settings\n",
-        "import yaml"
+        "import yaml\n",
+        "import random"
       ]
     },
     {
@@ -177,7 +178,7 @@
         "id": "WGHxCFZFv8sc",
         "outputId": "bd3c7107-932e-41f8-fc7b-2609a091bd52"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -216,7 +217,7 @@
       "metadata": {
         "id": "WxwJEW7Yux14"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -240,7 +241,7 @@
       "metadata": {
         "id": "40ft-0lLeBkx"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -254,7 +255,7 @@
       "metadata": {
         "id": "_8sOiGxduQqE"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -268,7 +269,7 @@
       "metadata": {
         "id": "GjoR3rmxFafU"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -285,7 +286,122 @@
       "metadata": {
         "id": "2feCb9HjGDWO"
       },
-      "execution_count": 16,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Showing Off Original Labels"
+      ],
+      "metadata": {
+        "id": "qXh1pTlIyCpd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def draw_yolo_box(image_path, label_path, color=(0, 0, 255), thickness=2):\n",
+        "    \"\"\"Reads an image and its YOLO label file, draws the bounding box.\"\"\"\n",
+        "    image = cv2.imread(image_path)\n",
+        "    if image is None:\n",
+        "        print(f\"Warning: Could not read image {image_path}\")\n",
+        "        return None\n",
+        "    h, w = image.shape[:2]\n",
+        "    try:\n",
+        "        with open(label_path, 'r') as f:\n",
+        "            line = f.readline().strip()\n",
+        "            if not line:\n",
+        "                print(f\"Warning: Label file {label_path} is empty.\")\n",
+        "                return image\n",
+        "\n",
+        "            parts = line.split()\n",
+        "\n",
+        "            if len(parts) == 5:\n",
+        "                class_id, x_center, y_center, width_rel, height_rel = map(float, parts)\n",
+        "\n",
+        "\n",
+        "                x_center_abs = x_center * w\n",
+        "                y_center_abs = y_center * h\n",
+        "                width_abs = width_rel * w\n",
+        "                height_abs = height_rel * h\n",
+        "\n",
+        "\n",
+        "                x_min = int(x_center_abs - (width_abs / 2))\n",
+        "                y_min = int(y_center_abs - (height_abs / 2))\n",
+        "                x_max = int(x_center_abs + (width_abs / 2))\n",
+        "                y_max = int(y_center_abs + (height_abs / 2))\n",
+        "\n",
+        "\n",
+        "                x_min = max(0, x_min)\n",
+        "                y_min = max(0, y_min)\n",
+        "                x_max = min(w - 1, x_max)\n",
+        "                y_max = min(h - 1, y_max)\n",
+        "\n",
+        "\n",
+        "                cv2.rectangle(image, (x_min, y_min), (x_max, y_max), color, thickness)\n",
+        "            else:\n",
+        "                print(f\"Warning: Invalid format in label file {label_path}. Expected 5 values, got {len(parts)}\")\n",
+        "\n",
+        "    except FileNotFoundError:\n",
+        "        print(f\"Warning: Label file {label_path} not found.\")\n",
+        "\n",
+        "        return image\n",
+        "    except Exception as e:\n",
+        "        print(f\"Error processing label file {label_path}: {e}\")\n",
+        "        return image\n",
+        "\n",
+        "    return image"
+      ],
+      "metadata": {
+        "id": "wxSgpn0IyLQF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if val_images:\n",
+        "    example_idx = random.randint(0, len(val_images) - 1)\n",
+        "    example_image_name = val_images[example_idx]\n",
+        "    example_label_name = val_labels[example_idx]\n",
+        "\n",
+        "    example_image_path = os.path.join(VAL_IMAGES_FOLDER, example_image_name)\n",
+        "    example_label_path = os.path.join(VAL_LABELS_FOLDER, example_label_name)\n",
+        "\n",
+        "    print(f\"Showing example: {example_image_name}\")\n",
+        "\n",
+        "    original_image = cv2.imread(example_image_path)\n",
+        "    original_image_rgb = cv2.cvtColor(original_image, cv2.COLOR_BGR2RGB)\n",
+        "\n",
+        "    image_with_box = draw_yolo_box(example_image_path, example_label_path, color=(255, 0, 0), thickness=2)\n",
+        "    if image_with_box is not None:\n",
+        "        image_with_box_rgb = cv2.cvtColor(image_with_box, cv2.COLOR_BGR2RGB)\n",
+        "\n",
+        "        plt.figure(figsize=(12, 6))\n",
+        "        plt.subplot(1, 2, 1)\n",
+        "        plt.imshow(original_image_rgb)\n",
+        "        plt.title(\"Original Image\")\n",
+        "        plt.axis(\"off\")\n",
+        "\n",
+        "        plt.subplot(1, 2, 2)\n",
+        "        plt.imshow(image_with_box_rgb)\n",
+        "        plt.title(\"Image with Ground Truth Box (Blue)\")\n",
+        "        plt.axis(\"off\")\n",
+        "\n",
+        "        plt.tight_layout()\n",
+        "        plt.show()\n",
+        "    else:\n",
+        "        print(\"could not display example image\")\n",
+        "\n",
+        "else:\n",
+        "    print(\"no validation images found\")"
+      ],
+      "metadata": {
+        "id": "tknuV1rfyCPE"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -317,7 +433,7 @@
       "metadata": {
         "id": "MtUvVO7zIjmz"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -339,7 +455,7 @@
         "id": "D0uYAOKNKXfL",
         "outputId": "55f6e8e1-0070-483d-c337-c83a1d3fe964"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -391,7 +507,7 @@
         "id": "y9Lqt4O_JcU0",
         "outputId": "964ac987-c221-49ba-933d-9af1d22d81d6"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -541,10 +657,111 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Results"
+      ],
+      "metadata": {
+        "id": "pQc9D89TzMKJ"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "results_plot_path = os.path.join(results.save_dir, \"results.png\")\n",
+        "confusion_matrix_path = os.path.join(results.save_dir, \"confusion_matrix.png\")\n",
+        "\n",
+        "print(f\"results saved to: {results.save_dir}\")\n",
+        "\n",
+        "if os.path.exists(results_plot_path):\n",
+        "    print(\"displaying training metrics plot (results.png):\")\n",
+        "    results_img = Image.open(results_plot_path)\n",
+        "    plt.figure(figsize=(10, 8))\n",
+        "    plt.imshow(results_img)\n",
+        "    plt.axis('off')\n",
+        "    plt.show()\n",
+        "else:\n",
+        "    print(f\"doesnt exist: {results_plot_path}\")\n",
+        "\n",
+        "if os.path.exists(confusion_matrix_path):\n",
+        "    print(\"Showing CM:\")\n",
+        "    cm_img = Image.open(confusion_matrix_path)\n",
+        "    plt.figure(figsize=(8, 8))\n",
+        "    plt.imshow(cm_img)\n",
+        "    plt.axis('off')\n",
+        "    plt.show()\n",
+        "else:\n",
+        "    print(f\"CM not found {confusion_matrix_path}\")\n",
+        "\n",
+        "#print(\"\\nFinal Metrics:\") this isn't working for some reason im not sure why\n",
+        "#print(results.metrics.box)"
+      ],
       "metadata": {
         "id": "iR83F6NlM6aq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "best_model_path = os.path.join(results.save_dir, 'weights/best.pt')\n",
+        "\n",
+        "print(f\"Loading best model from {best_model_path}\")\n",
+        "trained_model = YOLO(best_model_path)\n",
+        "\n",
+        "validation_image_paths = [os.path.join(VAL_IMAGES_FOLDER, img) for img in val_images]\n",
+        "\n",
+        "num_examples = 6\n",
+        "if len(validation_image_paths) >= num_examples:\n",
+        "    example_paths = random.sample(validation_image_paths, num_examples)\n",
+        "else:\n",
+        "    example_paths = validation_image_paths\n",
+        "\n",
+        "predictions = trained_model.predict(example_paths, conf=0.25)\n",
+        "\n",
+        "print(\"Displaying prediction results (Ground Truth: Red, Prediction: Green):\")\n",
+        "plt.figure(figsize=(15, num_examples * 5 // 2))\n",
+        "plot_index = 1\n",
+        "\n",
+        "for i, pred in enumerate(predictions):\n",
+        "    img_path = example_paths[i]\n",
+        "    base_name = os.path.basename(img_path)\n",
+        "    label_name = os.path.splitext(base_name)[0] + \".txt\"\n",
+        "    label_path = os.path.join(VAL_LABELS_FOLDER, label_name)\n",
+        "\n",
+        "    img_with_gt = draw_yolo_box(img_path, label_path, color=(255, 0, 0), thickness=2)\n",
+        "\n",
+        "    if img_with_gt is None: continue\n",
+        "\n",
+        "    img_with_preds = img_with_gt.copy()\n",
+        "    boxes = pred.boxes\n",
+        "\n",
+        "    if boxes is not None and len(boxes) > 0:\n",
+        "        for box in boxes:\n",
+        "            xyxy = box.xyxy[0].cpu().numpy().astype(int)\n",
+        "            conf = box.conf[0].cpu().numpy()\n",
+        "            cls = int(box.cls[0].cpu().numpy())\n",
+        "\n",
+        "            cv2.rectangle(img_with_preds, (xyxy[0], xyxy[1]), (xyxy[2], xyxy[3]), (0, 255, 0), 2)\n",
+        "            label_text = f\"{trained_model.names[cls]}: {conf:.2f}\"\n",
+        "            cv2.putText(img_with_preds, label_text, (xyxy[0], xyxy[1] - 10),\n",
+        "                        cv2.FONT_HERSHEY_SIMPLEX, 0.5, (0, 255, 0), 2)\n",
+        "    else:\n",
+        "        print(f\"No predictions for {base_name} (or below confidence threshold)\")\n",
+        "\n",
+        "\n",
+        "    plt.subplot( (num_examples + 1) // 2, 2, plot_index)\n",
+        "    plt.imshow(cv2.cvtColor(img_with_preds, cv2.COLOR_BGR2RGB))\n",
+        "    plt.title(f\"Pred: {base_name}\\n(GT: Blue, Preds: Green)\")\n",
+        "    plt.axis(\"off\")\n",
+        "    plot_index += 1\n",
+        "\n",
+        "plt.tight_layout()\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "nBmdIZQozQ3A"
       },
       "execution_count": null,
       "outputs": []
