Comma Fix in initialization parameters for model.

--- a/CS555Proj.ipynb
+++ b/CS555Proj.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMd4hJ6HpIxWY2yJv//SQcZ",
+      "authorship_tag": "ABX9TyMxP5nGgIX28TRODywMIp2O",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -493,7 +493,7 @@
         "    epochs = 100, # We can default to 100 for now then on patience setting will tell it to stop after 10 epochs if it isn't getting any better\n",
         "    imgsz = 640,\n",
         "    batch = -1,\n",
-        "    optimizer = \"AdamW\"\n",
+        "    optimizer = \"AdamW\",\n",
         "    patience = 10\n",
         ")\n",
         "# Docs here\n",
